--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "start": "webpack-dev-server --inline --progress --host 192.168.0.23",
     "build": "NODE_ENV=production webpack --progress -p --colors",
-    "postbuild": "npm run copyassets && npm run stylus",
-    "copyassets": "mkdir -p build/style && mkdir -p build/style/images && mkdir -p build/docs && cp -r style/images/* build/style/images && cp -r docs/* build/docs",
+    "postbuild": "npm run copyassets && npm run stylus && firebase deploy",
+    "copyassets": "mkdir -p build/style && mkdir -p build/style/images && mkdir -p build/docs && cp -r style/images/* build/style/images && cp -r docs/* build/docs && cp favicon.ico build/favicon.ico",
     "stylus": "stylus style/style.styl -o build/style/style.css",
     "server": "node server"
   },
